--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "This is an Open Sourcer project that generate a Cutter-Sanborn co
 authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
 license = "GPLv3+"
 readme = "README.md"
-packages = [{include = "gen_cutter_sanborn"}]
+packages = [{ include = "gen_cutter_sanborn" }]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -14,11 +14,24 @@ requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
 fastapi = "^0.87.0"
 gunicorn = "^20.1.0"
-uvicorn = {extras = ["standard"], version = "^0.20.0"}
+uvicorn = { extras = ["standard"], version = "^0.20.0" }
 
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.0.0"
+httpx = "^0.23.1"
+
+[tool.pytest.ini_options]
+python_files = [
+    "test*.py",
+    "*tests.py",
+]
+
+minversion = "6.0"
+addopts = "-ra -q -vv"
+testpaths = [
+    "tests",
+]
 
 [build-system]
 requires = ["poetry-core"]
