--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ uvicorn = { extras = ["standard"], version = "^0.20.0" }
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^4.0.0"
 httpx = "^0.23.1"
+flake8 = "^6.0.0"
+codecov = "^2.1.12"
 
 [tool.pytest.ini_options]
 python_files = [
