--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest-cov = "^4.0.0"
 httpx = "^0.23.1"
 flake8 = "^6.0.0"
 codecov = "^2.1.12"
+pytest-httpx = "^0.21.2"
 
 [tool.pytest.ini_options]
 python_files = [
